clusters/lab-02/pos/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pos
  namespace: pos
  labels:
    app.kubernetes.io/name: pos
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
       maxSurge: 1
       maxUnavailable: 1
  selector:
    matchLabels:
      app: pos
  template:
    metadata:
      labels:
        app: pos
    spec:
      containers:
        - name: app
          image: ghcr.io/cse-labs/heartbeat:0.4.0
          imagePullPolicy: Always

          args:
            - -log

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          livenessProbe:
            httpGet:
              path: /pos/healthz
              port: http
            initialDelaySeconds: 5
            failureThreshold: 10
            periodSeconds: 60

          resources:
            requests:
              cpu: 200m
              memory: 64Mi
            limits:
              cpu: 400m
              memory: 128Mi
