clusters/lab-02/pos/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pos
  namespace: pos
  annotations:
    kubernetes.io/ingress.class: nginx
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "false"

spec:
  # tls:
  # - secretName: pos
  #   hosts:
  #   - lab-02.res-edge.com
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /pos
        backend:
          service:
            name: pos
            port:
              number: 8080
